# utils

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  backtrace.cpp  backtrace.h  biicode.conf  bufferedreader.cpp  bufferedreader.h  condition.cpp  condition.h  config.h.in  cppcompat.h  fileoperations.cpp  fileoperations.h  filereader.cpp  filereader.h  format.cpp  log.cpp  log.h  meson.build  mutex.h  numericoperations.h  readerfactory.cpp  readerfactory.h  readerinterface.h  signal.h  simplesubscriber.h  stringoperations.cpp  stringoperations.h  subscriber.h  thread.cpp  thread.h  threadpool.cpp  threadpool.h  timeoperations.cpp  timeoperations.h  timerthread.h  trace.cpp  (+7 more)
CMakeModules/: CodeCoverage.cmake
Utils.xcodeproj/: project.pbxproj
Utils.xcodeproj/project.xcworkspace/xcshareddata/: Utils.xccheckout  UtilsLib.xccheckout
Utils.xcodeproj/project.xcworkspace/xcuserdata/dirk.xcuserdatad/: UserInterfaceState.xcuserstate
Utils.xcodeproj/xcuserdata/dirk.xcuserdatad/xcschemes/: Utils.xcscheme  UtilsNative.xcscheme  xcschememanagement.plist
bench/: CMakeLists.txt  joinstringbench.cpp  splitstringbench.cpp  trimstringbench.cpp
bii/: .hive.db  layout.bii  policies.bii  settings.bii
cmake/: FindLibunwind.cmake
inc/utils/: bufferedreader.h  crashhandler.h  enumflags.h  fileoperations.h  filereader.h  format.h  log.h  numericoperations.h  readerfactory.h  readerinterface.h  signal.h  simplesubscriber.h  socket.h  stringoperations.h  threadpool.h  timeoperations.h  timer.h  timerthread.h  trace.h  traits.h  workerthread.h
src/: backtrace.cpp  bufferedreader.cpp  crashhandler.cpp  fileoperations.cpp  filereader.cpp  format.cpp  log.cpp  readerfactory.cpp  stringoperations.cpp  threadpool.cpp  trace.cpp  workerthread.cpp
test/: CMakeLists.txt  bufferedreadertest.cpp  enumflagstest.cpp  fileoperationstest.cpp  main.cpp  meson.build  signaltest.cpp  stringoperationstest.cpp  threadpooltest.cpp  tracetest.cpp  workerthreadtest.cpp
xcode/: utilsconfig.h
